Use gfx::kGoogleGrey900 as Harmony primary color

Changes the color from 212121 to 202124. This also makes sure that the
site permission (page info) icons are rendered close to their correct
GG700 by default (they are derived from this text color).

Bug: chromium:820531, chromium:821996
Change-Id: Ic1c52198e5a8a3d958684bb1ddb61e0510311ec1
Reviewed-on: https://chromium-review.googlesource.com/1011548
Reviewed-by: Bret Sepulveda <bsep@chromium.org>
Commit-Queue: Peter Boström <pbos@chromium.org>
Cr-Commit-Position: refs/heads/master@{#550505}
Former-commit-id: e129764fd97838dec3ea0b96022b3b1e5125a246